force-app/main/default/objects/Quote/fields/Account_Salesperson__c.field-meta.xml
<CustomField>
    <fullName>Account_Salesperson__c</fullName>
    <formula>TEXT(Contact.Account.SalesPerson_Code__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Salesperson</label>
    <type>Text</type>
</CustomField>