force-app/main/default/objects/Quote/fields/Approved_By_Account_Manager_Owner__c.field-meta.xml
<CustomField>
    <fullName>Approved_By_Account_Manager_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved By Account Manager/Owner</label>
    <type>Checkbox</type>
</CustomField>