force-app/main/default/objects/Quote/fields/Converted_INR_Amount__c.field-meta.xml
<CustomField>
    <fullName>Converted_INR_Amount__c</fullName>
    <formula>IF(
  ISBLANK(DRC_NBC_Grand_Total__c),
  0,
  DRC_NBC_Grand_Total__c / CURRENCYRATE(TEXT(CurrencyIsoCode))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Converted INR Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>