force-app/main/default/objects/Quote/fields/DRC_Account_Owner_Manager__c.field-meta.xml
<CustomField>
    <fullName>DRC_Account_Owner_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Owner Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes1</relationshipName>
    <type>Lookup</type>
</CustomField>