force-app/main/default/objects/Quote/fields/DRC_NBC_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Account_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>