force-app/main/default/objects/Quote/fields/DRC_NBC_Approval_Required__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Approval_Required__c</fullName>
    <formula>TotalPrice &gt; 100000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Required</label>
    <type>Checkbox</type>
</CustomField>