force-app/main/default/objects/Quote/fields/DRC_NBC_Billing_Address_Id__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Billing_Address_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Address Id</label>
    <referenceTo>DRC_NBC_Addresses__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>