force-app/main/default/objects/Quote/fields/DRC_NBC_Delivery_Terms__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Delivery_Terms__c</fullName>
    <label>Delivery Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CFR</fullName>
            </value>
            <value>
                <fullName>CPT</fullName>
            </value>
            <value>
                <fullName>CIF</fullName>
            </value>
            <value>
                <fullName>Test</fullName>
                <isActive>false</isActive>
                <label>Test</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>