force-app/main/default/objects/Quote/fields/DRC_NBC_Grand_Total__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Grand_Total__c</fullName>
    <formula>IF(
  ISPICKVAL(DRC_NBC_Type__c, &quot;Domestic&quot;),
  
  TotalPrice +
  /* GST logic based on state */
  IF(
     TEXT(Contact.Account.BillingStateCode) = &quot;MH&quot;,
    /* CGST + SGST */
    IF(ISBLANK(DRC_NBC_C_GST__c), 0, DRC_NBC_C_GST__c) +
    IF(ISBLANK(DRC_NBC_S_GST__c), 0, DRC_NBC_S_GST__c),
    /* IGST */
    IF(ISBLANK(DRC_NBC_I_GST__c), 0, DRC_NBC_I_GST__c)
  ) +
  /* Other taxes */
  IF(ISBLANK(DRC_NBC_Other_Tax_Amount__c), 0, DRC_NBC_Other_Tax_Amount__c) +
  IF(ISBLANK(DRC_NBC_TCS_Amount__c), 0, DRC_NBC_TCS_Amount__c),

  /* EXPORT case */
  IF(
    ISPICKVAL(DRC_NBC_Type__c, &quot;Export&quot;),
    TotalPrice +
    IF(ISBLANK(DRC_NBC_Other_Tax_Amount__c), 0, DRC_NBC_Other_Tax_Amount__c),

    /* DEFAULT fallback (if type is neither Domestic nor Export) */
    TotalPrice
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grand Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>