force-app/main/default/objects/Quote/fields/DRC_NBC_I_GST__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_I_GST__c</fullName>
    <formula>IF(
    AND(
        ISPICKVAL(DRC_NBC_Type__c, &quot;Domestic&quot;),
        TEXT( Contact.Account.BillingStateCode) &lt;&gt; &quot;MH&quot;
    ),
    TotalPrice* 0.18,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IGST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>