force-app/main/default/objects/Quote/fields/DRC_NBC_Import_Starting_Sequence__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Import_Starting_Sequence__c</fullName>
    <label>Domestic Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>