force-app/main/default/objects/Quote/fields/DRC_NBC_Invoice_Export_Sequence_Number__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Invoice_Export_Sequence_Number__c</fullName>
    <label>Export Sequence Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>