force-app/main/default/objects/Quote/fields/DRC_NBC_Lead_Time__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Lead_Time__c</fullName>
    <description>Lead time</description>
    <label>Lead Time</label>
    <type>Date</type>
</CustomField>