force-app/main/default/objects/Quote/fields/DRC_NBC_Payment_Term_Description__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Payment_Term_Description__c</fullName>
    <label>Payment Term Description</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PDC 90 days</fullName>
            </value>
            <value>
                <fullName>PDC 60 days</fullName>
            </value>
            <value>
                <fullName>PDC 45 days</fullName>
            </value>
            <value>
                <fullName>PDC 30 days</fullName>
            </value>
            <value>
                <fullName>Irrevocable LC at sight</fullName>
            </value>
            <value>
                <fullName>Irrevocable LC 90 days</fullName>
            </value>
            <value>
                <fullName>Irrevocable LC 60 days</fullName>
            </value>
            <value>
                <fullName>Irrevocable LC 45 days</fullName>
            </value>
            <value>
                <fullName>Irrevocable LC 30 days</fullName>
            </value>
            <value>
                <fullName>Free sample</fullName>
            </value>
            <value>
                <fullName>DP AT SIGHT</fullName>
            </value>
            <value>
                <fullName>DP 90 days</fullName>
            </value>
            <value>
                <fullName>DP 60 days</fullName>
            </value>
            <value>
                <fullName>DP 30 days</fullName>
            </value>
            <value>
                <fullName>DA 90 days</fullName>
            </value>
            <value>
                <fullName>DA 60 days</fullName>
            </value>
            <value>
                <fullName>DA 45 days</fullName>
            </value>
            <value>
                <fullName>DA 30 days</fullName>
            </value>
            <value>
                <fullName>Bond transfer</fullName>
            </value>
            <value>
                <fullName>BL 90 days</fullName>
            </value>
            <value>
                <fullName>BL 75 days</fullName>
            </value>
            <value>
                <fullName>BL 60 days</fullName>
            </value>
            <value>
                <fullName>BL 45 days</fullName>
            </value>
            <value>
                <fullName>BL 30 days</fullName>
            </value>
            <value>
                <fullName>BL 120 days</fullName>
            </value>
            <value>
                <fullName>90 days from invoice</fullName>
            </value>
            <value>
                <fullName>75 days from invoice</fullName>
            </value>
            <value>
                <fullName>70% advance &amp; 30% CACD</fullName>
            </value>
            <value>
                <fullName>7 days from invoice</fullName>
            </value>
            <value>
                <fullName>60 days from LR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>