force-app/main/default/objects/Quote/fields/DRC_NBC_Shipping_Address_Id__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Shipping_Address_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipping Address Id</label>
    <referenceTo>DRC_NBC_Addresses__c</referenceTo>
    <relationshipLabel>Quotes (Shipping Address Id)</relationshipLabel>
    <relationshipName>Quotes1</relationshipName>
    <type>Lookup</type>
</CustomField>