force-app/main/default/objects/Quote/fields/DRC_NBC_Show_Submit_For_Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Show_Submit_For_Sales_Manager__c</fullName>
    <formula>AND(
    OR(
        CreatedBy.UserRole.Name = &quot;Sales Manager&quot;,
        CreatedBy.UserRole.Name = &quot;Business Dev. Director-Europe&quot;
    ),
    DRC_NBC_Grand_Total__c &gt; 1000000
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Show Submit For Sales Manager</label>
    <type>Checkbox</type>
</CustomField>