force-app/main/default/objects/Quote/fields/DRC_NBC_Special_Requirements__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Special_Requirements__c</fullName>
    <label>Special Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>