force-app/main/default/objects/Quote/fields/DRC_NBC_Type__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domestic</fullName>
            </value>
            <value>
                <fullName>Export</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>