force-app/main/default/objects/Quote/fields/Highest_Authority_User__c.field-meta.xml
<CustomField>
    <fullName>Highest_Authority_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Highest Authority User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes2</relationshipName>
    <type>Lookup</type>
</CustomField>