force-app/main/default/objects/Quote/listViews/Export.listView-meta.xml
<ListView>
    <fullName>Export</fullName>
    <columns>QUOTE.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>QUOTE.SUBTOTAL</columns>
    <columns>DRC_NBC_Grand_Total__c</columns>
    <columns>QUOTE.EXPIRATIONDATE</columns>
    <columns>QUOTE.ISSYNCING</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>DRC_NBC_Type__c</field>
        <operation>equals</operation>
        <value>Export</value>
    </filters>
    <label>Export</label>
</ListView>